second section is mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <header class="page-header">
+    <!-- <header class="page-header">
       <div class="container header-container">
         <nav class="header-nav">
           <a class="logo header-logo" href="./index.html"
@@ -37,16 +37,16 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <main>
 
-      <section class="box">
+      <!-- <section class="box">
        <div class="container">
           <h1 class="title-box">Effective Solutions for Your Business</h1>
           <button type="button" class="button-box">Order Service</button>
        </div>
-      </section>
+      </section> -->
 
       <section class="container-description">
         <div class="container">
@@ -104,7 +104,7 @@
         </div>
       </section>
 
-      <section class="team">
+      <!-- <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="list">
@@ -235,9 +235,9 @@
 
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container">
           <h2 class="team-title">Our Portfolio</h2>
           <ul class="services">
@@ -320,12 +320,12 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
     </main>
   
     
-    <footer class="page-footer">
+    <!-- <footer class="page-footer">
      <div class="container footer">
         <div class="footer-log">
           <a class="footer-logotype" href="./index.html"
@@ -385,7 +385,7 @@
         </div>
 
      </div>
-    </footer>
+    </footer> -->
 
 
   <div class="backdrop">
