--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
       </section>
 
-      <!-- <section class="team">
+      <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="list">
@@ -235,7 +235,7 @@
 
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="portfolio">
         <div class="container">
