first section is mobile

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 
     <main>
 
-      <!-- <section class="box">
+      <section class="box">
        <div class="container">
           <h1 class="title-box">Effective Solutions for Your Business</h1>
           <button type="button" class="button-box">Order Service</button>
        </div>
-      </section> -->
+      </section>
 
       <section class="container-description">
         <div class="container">
