--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
     </main>
   
     
-    <!-- <footer class="page-footer">
+    <footer class="page-footer">
      <div class="container footer">
         <div class="footer-log">
           <a class="footer-logotype" href="./index.html"
@@ -519,7 +519,7 @@
         </div>
 
      </div>
-    </footer> -->
+    </footer>
 
 
   <div class="backdrop is-open">
@@ -575,8 +575,9 @@
               <svg class="" width="10" height="8">
                 <use href="./images/icons.svg#icon-icon"></use>
               </svg>
+              <p>I accept the terms and conditions of the</p> 
+              <a class="privacy-policy" href="#">Privacy Policy</a>
             </span>
-            I accept the terms and conditions of the <a class="privacy-policy" href="#">Privacy Policy</a>
           </label>
         </div>
         <button class="modal-submit" type="submit">Send</button>
