--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
     
     <footer class="page-footer">
      <div class="container footer">
-        <div class="footer-log">
+        <div class="footer-logo">
           <a class="footer-logotype" href="./index.html"
           >Web<span class="logo-part">Studio</span></a>
           <p class="text-footer">
@@ -508,10 +508,13 @@
           <p class="text-subscribe">Subscribe</p>
           <form class="subscribe-footer">
             <label class="subscribe-footer-label" for="user-e-mail">
-              <input class="subscribe-user-e-mail" type="email" id="user-e-mail" name="user-e-mail"  placeholder="E-mail" />
+              <input class="subscribe-user-e-mail" 
+              type="email" id="user-e-mail" 
+              name="user-e-mail"  placeholder="E-mail" />
             </label>
             <button class="button-subscribe" type="submit">Subscribe
-              <svg class="button-subscribe-icon-send" width="24" height="24">
+              <svg class="button-subscribe-icon-send" 
+              width="24" height="24">
                 <use href="./images/icons.svg#icon-icon-send"></use>
               </svg>
             </button>
@@ -522,7 +525,7 @@
     </footer>
 
 
-  <div class="backdrop is-open">
+  <div class="backdrop">
     <div class="modal">
       <button type="button" class="modal-close-btn">
         <svg class="close-icon" width="8" height="8">
@@ -575,9 +578,13 @@
               <svg class="" width="10" height="8">
                 <use href="./images/icons.svg#icon-icon"></use>
               </svg>
-              <p>I accept the terms and conditions of the</p> 
-              <a class="privacy-policy" href="#">Privacy Policy</a>
             </span>
+
+            <span class="accept">
+              I accept the terms and conditions of the
+              <a class="privacy-policy" href="#">Privacy Policy</a>
+            </span>  
+
           </label>
         </div>
         <button class="modal-submit" type="submit">Send</button>
